python-web-server/tests/requests/invalid/version_01.py
from web_server.http.errors import InvalidHTTPVersion

request = InvalidHTTPVersion
